finalize description files

--- a/A11Y.md
+++ b/A11Y.md
@@ -1,1 +1,16 @@
+# Keyboard navigation
+- modal can be closed easily with close button
+- All interactive components are accessible via keyboard
+
+# Well-used HTML
+- Buttons use semantic `<button>` tags instead of `<div>` or `<span>`
+- `aria-hidden` is used for background elements when modals are open to make the form looks better
+
+# Pictures
+- All uploaded images and thumbnails have clear alt texts
+
+# Readability
+- High contrast colors are used for text
+- Disabled or locked states use seperate colors to avoid confusion
+- Font sizes and spacing follow a consistent format
 
